--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container text-center">
+            <h1 class="lead">Game Page</h1>
+        </div>
+    </div>
     <div class="container-fluid bg-success">
         <div class="container bg-primary">
             <div class="row">
