--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="jumbotron jumbotron-fluid">
+    <header class="jumbotron jumbotron-fluid my-0">
         <div class="container text-center">
             <h1 class="lead">Game Page</h1>
         </div>
-    </div>
-    <div id="bg"class="container-fluid">
+    </header>
+    <div id="bg"class="container-fluid my-0">
         <div id="content-bg" class="container">
             <div class="row">
                 <div class="col-9 py-4 px-0 pl-4">
