--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div id="bg"class="container-fluid my-0">
         <div id="content-bg" class="container">
             <div class="row">
-                <div class="col-9 py-4 px-0 pl-4">
-                    <img src="game-img.jpg" alt="" width="90%">
+                <div class="col-3 py-4 px-0 pl-4">
+                    <img src="maets-game-photo.png" alt="" width="90%">
                 </div>
                 <div class="col-3 py-4 px-0 pr-4">
                     <img src="game-logo.jpg" alt="" width="100%">
