rounded logo vorder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="content-bg" class="container">
             <div class="row">
                 <div class="col-3 py-4 px-0 pl-4">
-                    <img src="maets-game-photo.png" alt="" width="90%">
+                    <img src="maets-game-photo.png" alt="" width="90%" class="rounded">
                 </div>
                 <div class="col-3 py-4 px-0 pr-4">
                     <img src="game-logo.jpg" alt="" width="100%">
