--- a/index.html
+++ b/index.html
@@ -17,17 +17,13 @@
         </div>
     </header>
     <div id="bg"class="container-fluid my-0">
+        <div class="game-bg"></div>
         <div id="content-bg" class="container">
             <div class="row">
                 <div class="col-3 py-4 px-0 pl-4">
-                    <img src="maets-game-photo.png" alt="" width="90%" class="rounded-circle">
+                    <img src="maets-game-photo.png" alt="" width="90%" class="rounded-lg game-logo">
                 </div>
-                <div class="col-3 py-4 px-0 pr-4">
-                    <img src="game-logo.jpg" alt="" width="100%">
-                    <div id="desc">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur voluptas sapiente nisi accusamus, nesciunt ad fuga dolore nulla quia debitis! Alias nisi illo quos voluptates amet enim, cupiditate reiciendis commodi nesciunt facere placeat illum at cumque possimus iste incidunt! Est nam illo enim laboriosam impedit amet et explicabo culpa autem maxime, maiores ut repellat at labore expedita totam soluta, cum praesentium neque accusamus. Nisi, fuga sunt ea eius aperiam deserunt accusantium iure ducimus quis dolorem earum ipsa aliquid consequuntur reprehenderit et quidem nobis at sequi nam sapiente consequatur necessitatibus. Aut optio pariatur perferendis placeat velit? Soluta ipsa neque libero doloremque!
-                    </div>
-                </div>
+                
             </div>
         </div>  
     </div>
